--- a/package.json
+++ b/package.json
@@ -1,16 +1,36 @@
 {
-    "name": "@kids/math-generator",
-    "version": "0.1.0",
+    "name": "kids-math-generator",
+    "version": "1.0.0",
     "description": "Math question generator for grades 1-6",
+    "keywords": [
+        "math",
+        "generator",
+        "kids",
+        "math",
+        "additin",
+        "division",
+        "multiplication",
+        "division"
+    ],
+    "homepage": "https://github.com/serkanalgur/kids-math-generator#readme",
+    "bugs": {
+        "url": "https://github.com/serkanalgur/kids-math-generator/issues"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/serkanalgur/kids-math-generator.git"
+    },
+    "license": "MIT",
+    "author": "Serkan Algur <kaisercrazy@gmail.com> (https://github.com/serkanalgur)",
     "type": "module",
-    "main": "dist/index.js",
-    "types": "dist/index.d.ts",
     "exports": {
         ".": {
             "import": "./dist/index.js",
             "types": "./dist/index.d.ts"
         }
     },
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "files": [
         "dist"
     ],
@@ -19,9 +39,14 @@
         "test": "node dist/test/index.js",
         "prepare": "npm run build"
     },
+    "publishConfig": {
+        "access": "public"
+    },
+    "dependencies": {
+        "undici-types": "^7.16.0"
+    },
     "devDependencies": {
         "typescript": "^5.0.0",
         "@types/node": "^25.0.3"
-    },
-    "license": "MIT"
+    }
 }
